--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1687,3 +1687,26 @@
 	year = {2023},
 	organization = {IEEE},
 }
+
+@article{hefford-2023,
+	title = {Coend Optics for Quantum Combs},
+	volume = {380},
+	ISSN = {2075-2180},
+	url = {http://dx.doi.org/10.4204/EPTCS.380.4},
+	DOI = {10.4204/eptcs.380.4},
+	journal = {Electronic Proceedings in Theoretical Computer Science},
+	publisher = {Open Publishing Association},
+	author = {Hefford, James and Comfort, Cole},
+	year = {2023},
+	month = aug,
+	pages = {63–76},
+}
+
+@misc{riley-2018,
+	title = {Categories of Optics},
+	author = {Mitchell Riley},
+	year = {2018},
+	eprint = {1809.00738},
+	archivePrefix = {arXiv},
+	primaryClass = {math.CT},
+}
